Updated workflow diagram. Minor fixes

--- a/doc-V2V_Guide/cfme/doc/con_Discovery.adoc
+++ b/doc-V2V_Guide/cfme/doc/con_Discovery.adoc
@@ -30,6 +30,25 @@ There are no hard and fast rules to determine how long the actual migration will
 Assess the effect the migration may have on a production environment. Check whether users will lose access to critical applications.
 
 [discrete]
+== Migration Example
+
+This migration example is provided to help you estimate how long your migration may take.
+
+The following infrastructure took 1 hour and 30 minutes to migrate:
+
+* Infrastructure:
+
+** 10 virtual machines (100 GB RAM).
+** Virtual machine disks 2/3 full (total of 1 TB of data).
+
+* Hardware:
+
+** Strong host (40 cores, 500 GB RAM).
+** Fast SSD XtremIO storage.
+** Fiber Channel 8 interface for host-to-storage connection.
+** 10GbE network interface cards for all other connections.
+
+[discrete]
 == Best Practices
 
 * Create migration groups, so that you are not migrating all of your virtual machines at the same time. The following questions provide guidelines:
@@ -47,6 +66,8 @@ Assess the effect the migration may have on a production environment. Check whet
 ** Load balancers
 
 * Keep linked applications together, so that they migrate at the same time.
+
+* Rebooting or deleting snapshots should be done before the migration, to reduce the risk of failure.
 
 * Schedule your migration carefully, to minimize the impact on your users.
 
