--- a/doc-V2V_Guide/cfme/doc/modules/con_Migration_overview.adoc
+++ b/doc-V2V_Guide/cfme/doc/modules/con_Migration_overview.adoc
@@ -1,9 +1,9 @@
 [id="Migration_overview"]
 = Workflow
 
-The following diagram (TBD) provides a high-level view of the infrastructure migration workflow. An understanding of this workflow will greatly simplify troubleshooting.
+The diagram below provides a high-level view of the infrastructure migration workflow. An understanding of this workflow will greatly simplify troubleshooting.
 
-// image:IMS_migration.png[]
+image:migration_workflow.png[]
 
 . The Infrastructure Admin creates an infrastructure mapping and a virtual machine migration plan in CloudForms and runs the migration plan.
 . CloudForms locates the virtual machines to be migrated based on the infrastructure mapping.
