--- a/doc-V2V_Guide/cfme/doc/modules/con_Prerequisites.adoc
+++ b/doc-V2V_Guide/cfme/doc/modules/con_Prerequisites.adoc
@@ -32,4 +32,4 @@ See  link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.6/h
 
 * RHV conversion hosts created and configured.
 +
-See xref:proc_Creating_rhv_conversion_hosts[Creating RHV Conversion Hosts] and xref:Configuring_rhv_conversion_hosts[Configuring RHV Conversion Hosts] below. *(%AP: How many conversions hosts should they create? Referred by Brett to Daniel Gur )*
+See xref:proc_Creating_rhv_conversion_hosts[Creating RHV Conversion Hosts] and xref:Configuring_rhv_conversion_hosts[Configuring RHV Conversion Hosts] below.
