--- a/doc-V2V_Guide/cfme/doc/modules/proc_Creating_and_Running_a_Migration_Plan.adoc
+++ b/doc-V2V_Guide/cfme/doc/modules/proc_Creating_and_Running_a_Migration_Plan.adoc
@@ -47,3 +47,8 @@ If you are migrating a small number of virtual machines, follow the procedure be
 . Click *Close*. The migration plan may take some time to complete. *In Progress Plans*, the status of the datastores and VMs, and the elapsed time are displayed.
 +
 When the migration is complete, *Completed Migrations* is displayed, with the number of successfully migrated virtual machines.
+
+[NOTE]
+====
+During migration, the clock displaying the migration plan progress (in menu:Compute[Migration]) may be a few seconds ahead of the clock that appears in the migration plan details (menu:Compute[Migration>__Migration Plan__]). This is because the migration plan clock displays the total time to run the migration plan, while the migration plan details clock displays the total time to migrate the virtual machines.
+====
