--- a/doc-V2V_Guide/cfme/doc/modules/proc_Creating_rhv_conversion_hosts.adoc
+++ b/doc-V2V_Guide/cfme/doc/modules/proc_Creating_rhv_conversion_hosts.adoc
@@ -1,6 +1,15 @@
 [id="proc_Creating_rhv_conversion_hosts"]
 = Creating RHV Conversion Hosts
 
+All the virtual machines that are specified in a migration plan are migrated at the same time. Therefore, the number of RHV conversion hosts that you require depends on the number of virtual machines you intend to migrate.
+
+Each conversion host is limited to 10 concurrent migrations. If you want to migrate more than 10 virtual machines simultaneously, you should configure additional conversion hosts to support the load. Multiple conversion hosts are recommended, even when performing fewer than 10 concurrent migrations, for load-balancing purposes.
+
+[NOTE]
+====
+The number of virtual machines that you can migrate at the same time depends on your infrastructure capabilities. Each migration requires a certain amount of network bandwidth, I/O throughput, and processing power for the conversion process. You should test your environment to understand how many migrations can occur simultaneously without negative effects.
+====
+
 Create one or more RHV conversion hosts:
 
 . Log into the link:https://www.vmware.com/support/developer/vddk/[VMware VDDK Documentation] site and download the latest VDDK package (for example, `VMware-vix-disklib-6.5.3-8315684.x86_64.tar.gz`) to your local machine.
@@ -11,7 +20,7 @@ Create one or more RHV conversion hosts:
 +
 [options="nowrap" subs="+quotes,verbatim"]
 ----
-# cd /usr/share/doc/ovirt-ansible-v2v-conversion-host-_version_/examples/
+# cd /usr/share/doc/ovirt-ansible-v2v-conversion-host-_version_/playbooks/
 ----
 
 . Create a `conversion_hosts` inventory file:
@@ -40,7 +49,7 @@ all:
 
 [NOTE]
 ====
-If you upgrade your RHV environment, you must run the `conversion_host_enable` playbook again to update the IMS packages.
+If you upgrade your RHV environment, you must run the `conversion_host_enable` playbook again, with the option `-e v2v_vddk_override=true`, to update the IMS packages.
 ====
 
 [discrete]
