Ansible automation note.

--- a/doc-V2V_Guide/cfme/doc/modules/proc_Creating_and_Running_a_Migration_Plan.adoc
+++ b/doc-V2V_Guide/cfme/doc/modules/proc_Creating_and_Running_a_Migration_Plan.adoc
@@ -40,8 +40,6 @@ If you are migrating a small number of virtual machines, follow the procedure be
 
 . Select the virtual machines to migrate and click *Next*.
 
-. *(%AP: TBD: Ansible pre and post playbooks with link to https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.6/html-single/creating_a_service_in_cloudforms_for_virtual_machine_provisioning/)*
-
 . Select *Start Migration Immediately* and click *Create*.
 
 . Click *Close*. The migration plan may take some time to complete. *In Progress Plans*, the status of the datastores and VMs, and the elapsed time are displayed.
@@ -52,3 +50,17 @@ When the migration is complete, *Completed Migrations* is displayed, with the nu
 ====
 During migration, the clock displaying the migration plan progress (in menu:Compute[Migration]) may be a few seconds ahead of the clock that appears in the migration plan details (menu:Compute[Migration>__Migration Plan__]). This is because the migration plan clock displays the total time to run the migration plan, while the migration plan details clock displays the total time to migrate the virtual machines.
 ====
+
+[discrete]
+== Advanced Migration: Automating Pre- and Post-Migration Tasks with Ansible
+
+Certain tasks may need to be performed before or after a virtual machine is migrated, for example, removing web server virtual machines from a load-balancing pool before migration and adding them back to the pool after migration.
+
+When you create a migration plan, there is an option to specify an Ansible service catalog item to be run before or after each virtual machine within the plan is migrated.
+
+[NOTE]
+====
+You must create the Ansible service catalog items before you create a migration plan.
+====
+
+See link:[TBD] for details.
