--- a/doc-Managing_Providers/topics/Tagging_Ansible_elements.adoc
+++ b/doc-Managing_Providers/topics/Tagging_Ansible_elements.adoc
@@ -1,8 +1,10 @@
+[[ansible-tagging]]
+
 = Tagging Ansible Playbooks, Repositories, and Credentials
 
-Apply tags to Ansible playbooks, repositories, and credentials to categorize them together at the same time.  Tagging enables administrators to limit users to view those Ansible elements that have been enabled for that set of permissions
+Apply tags to Ansible playbooks, repositories, and credentials to categorize them.  Tagging enables administrators to limit users to view those Ansible elements that have been enabled for that set of user permissions
 
-Add tags to Ansible Playbooks:
+== Adding tags to Ansible Playbooks
 
 . Navigate to menu:Automate[Ansible > Playbooks].
 . Select the checkboxes for the Ansible playbooks to tag.
@@ -14,7 +16,7 @@ image:2219.png[]
 . Select a value to assign from the second list.
 . Click *Save*.
 
-Add tags to Ansible Repositories:
+== Adding tags to Ansible Repositories
 
 . Navigate to menu:Automate[Ansible > Repositories].
 . Select the checkboxes for the Ansible repositories to tag.
@@ -26,7 +28,7 @@ image:2219.png[]
 . Select a value to assign from the second list.
 . Click *Save*.
 
-Add tags to Ansible Credentials:
+== Adding tags to Ansible Credentials
 
 . Navigate to menu:Automate[Ansible > credentials].
 . Select the checkboxes for the Ansible credentials to tag.
