--- a/doc-Managing_Providers/topics/Automation_Management_Providers.adoc
+++ b/doc-Managing_Providers/topics/Automation_Management_Providers.adoc
@@ -94,6 +94,9 @@ Alternately, you can refresh some or all repositories from the list view:
 include::Ansible_Credentials.adoc[]
 
 :leveloffset: 3
+include::Tagging_Ansible_elements.adoc[]
+
+:leveloffset: 3
 include::Optimizing_Playbooks.adoc[]
 
 :leveloffset: 1
