Added a new section about exporting and importing analysis profiles.

--- a/doc-Policies_and_Profiles_Guide/topics/chap_policy_profiles.adoc
+++ b/doc-Policies_and_Profiles_Guide/topics/chap_policy_profiles.adoc
@@ -91,3 +91,5 @@ include::Removing_Policy_Profiles_from_an_Instance.adoc[]
 include::To_disable_a_Policy.adoc[]
 
 include::To_view_Policy_Simulation_RSOP.adoc[]
+
+include::Exporting_and_Importing_Analysis_Profiles.adoc[]
