Link to creating Ansible service catalog item in CF doc

--- a/doc-V2V_Guide/cfme/doc/modules/proc_Creating_and_Running_a_Migration_Plan.adoc
+++ b/doc-V2V_Guide/cfme/doc/modules/proc_Creating_and_Running_a_Migration_Plan.adoc
@@ -60,7 +60,5 @@ When you create a migration plan, there is an option to specify an Ansible servi
 
 [NOTE]
 ====
-You must create the Ansible service catalog items before you create a migration plan.
+You must create the Ansible service catalog items before you create a migration plan. See link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.6/html-single/provisioning_virtual_machines_and_hosts/#create-playbook-service-catalog-item[Creating an Ansible Playbook Service Catalog Item] for details.
 ====
-
-See link:[TBD] for details.
