--- a/doc-Policies_and_Profiles_Guide/topics/Exporting_and_Importing_Analysis_Profiles.adoc
+++ b/doc-Policies_and_Profiles_Guide/topics/Exporting_and_Importing_Analysis_Profiles.adoc
@@ -1,7 +1,7 @@
 [[exporting-importing-analysis-profile]]
 === Exporting and Importing Analysis Profiles
 
-{product-title_short} SmartState analysis requires an analysis profile to select the files to be scanned by a compliance policy. {product-title_short} has the ability to export and import SmartState analysis profiles via the command line using rake commands, so that approved configurations can be imported into customer environments, and for version control.
+{product-title_short} SmartState analysis requires an analysis profile to select the files to be scanned by a compliance policy. {product-title_short} has the ability to export and import SmartState analysis profiles via the command line using rake commands. As a result, approved configurations can be easily imported into customer environments, without having to manually recreate the profile through the user interface.
 
 To export an analysis profile, run:
 
