edited installation instructions, a few tweaks to the config chapter to make it flow better

--- a/common/configuration-db.adoc
+++ b/common/configuration-db.adoc
@@ -7,15 +7,15 @@ Before installing an internal database, add a disk to the infrastructure hosting
 ifdef::login[]
 . After starting the appliance, log in with a user name of `root` and the default password of `smartvm`. This displays the Bash prompt for the `root` user.
 endif::login[]
-ifdef::ssh[] 
+ifdef::ssh[]
 . Log in to the appliance using the SSH key.
-endif::ssh[] 
+endif::ssh[]
 . Enter the `appliance_console` command. The {product-title} appliance summary screen displays.
 . Press *Enter* to manually configure settings.
 . Select *5) Configure Database* from the menu.
 . You are prompted to create or fetch an encryption key.
 * If this is the first {product-title} appliance, choose *1) Create key*.
-* If this is not the first {product-title} appliance, choose *2) Fetch key from remote machine* to fetch the key from the first appliance. For worker and multi-region setups, use this option to copy key from another appliance. 
+* If this is not the first {product-title} appliance, choose *2) Fetch key from remote machine* to fetch the key from the first appliance. For worker and multi-region setups, use this option to copy key from another appliance.
 +
 [NOTE]
 ====
@@ -23,7 +23,7 @@ All {product-title_short} appliances in a multi-region deployment must use the s
 ====
 +
 . Choose *1) Create Internal Database* for the database location.
-. Choose a disk for the database. This can be either a disk you attached previously, or a partition on the current disk. 
+. Choose a disk for the database. This can be either a disk you attached previously, or a partition on the current disk.
 +
 [IMPORTANT]
 ====
@@ -34,13 +34,13 @@ If there is an unpartitioned disk attached to the virtual machine, the dialog wi
 +
 ----
 1) /dev/vdb: 20480
-2) Don't partition the disk 
+2) Don't partition the disk
 ----
 +
 * Enter *1* to choose `/dev/vdb` for the database location. This option creates a logical volume using this device and mounts the volume to the appliance in a location appropriate for storing the database. The default location is `/var/opt/rh/rh-postgresql95/lib/pgsql`, which can be found in the environment variable `$APPLIANCE_PG_MOUNT_POINT`.
-* Enter *2* to continue without partitioning the disk. A second prompt will confirm this choice. Selecting this option results in using the root filesystem for the data directory (not advised in most cases). 
+* Enter *2* to continue without partitioning the disk. A second prompt will confirm this choice. Selecting this option results in using the root filesystem for the data directory (not advised in most cases).
 . Enter *Y* or *N* for *Should this appliance run as a standalone database server?*
-* Select *Y* to configure the appliance as a database-only appliance. As a result, the appliance is configured as a basic PostgreSQL server, without a user interface. 
+* Select *Y* to configure the appliance as a database-only appliance. As a result, the appliance is configured as a basic PostgreSQL server, without a user interface.
 * Select *N* to configure the appliance with the full administrative user interface.
 . When prompted, enter a unique number to create a new region.
 +
@@ -51,4 +51,4 @@ Creating a new region destroys any existing data on the chosen database.
 +
 .  Create and confirm a password for the database.
 
-{product-title} then configures the internal database.
+{product-title} then configures the internal database. This takes a few minutes. After the database is created and initialized, you can log in to {product-title_short}.
