--- a/doc-Managing_Authentication/topics/External_AD.adoc
+++ b/doc-Managing_Authentication/topics/External_AD.adoc
@@ -171,7 +171,7 @@ After configuring {product-title_short} to connect to an Active Directory domain
 +
 image:AD-userlookup.png[]
 +
-. Click *Retrieve* to look up details for the user in Active Directory and pull group information for the user. As a result, the AD groups will appear in the *LDAP Groups for User* dropdown list.
+. Click *Retrieve* to look up details for the user in Active Directory and pull group information for the user. As a result, the AD groups will appear in the *LDAP Groups for User* drop-down list.
 . From the list in *LDAP Groups for User*, select the group you want to associate a {product-title_short} role with; for example, the `cloudforms` group.
 +
 image:Assign_AD-Roles.png[]
