Updates from KK's review

--- a/doc-V2V_Guide/cfme/doc/modules/con_Prerequisites.adoc
+++ b/doc-V2V_Guide/cfme/doc/modules/con_Prerequisites.adoc
@@ -10,6 +10,7 @@ Before migrating your VMware system, your environment must have the following:
 The network configuration must not be changed in any way during the migration. IP addresses, VLANs, and other network configurations must be the same, before and after migration.
 ====
 
+* Target datastore with sufficient space for the virtual machines that will be migrated.
 * Red Hat Virtualization Manager 4.2.4 or later installed.
 +
 See the link:https://access.redhat.com/documentation/en-us/red_hat_virtualization/4.2/html/planning_and_prerequisites_guide/[Red Hat Virtualization Planning and Prerequisites Guide] and link:https://access.redhat.com/documentation/en-us/red_hat_virtualization/4.2/html-single/installation_guide/#part-Installing_the_Red_Hat_Virtualization_Manager[Installing the Red Hat Virtualization Manager] in the _Red Hat Virtualization Installation Guide_.
