--- a/doc-V2V_Guide/cfme/doc/modules/con_Troubleshooting.adoc
+++ b/doc-V2V_Guide/cfme/doc/modules/con_Troubleshooting.adoc
@@ -6,7 +6,8 @@
 
 If a migration fails for any reason (for example, network communication between the source and target providers is disrupted during the migration process), you can re-migrate the virtual machines:
 
-. Delete the target virtual machines that were created during the failed migration. Not doing so will cause the migration to fail because a target machine with the same name already exists.
+. Delete any target virtual machines that were created during the failed migration. Otherwise, the re-migration will fail because a target machine with the same name already exists.
+. Delete disks that were created in the target datastore during the failed migration to free up space.
 . Create a xref:CSV_import[CSV file] with the names and, optionally, providers, of the source virtual machines.
 +
 [NOTE]
