--- a/doc-V2V_Guide/cfme/doc/modules/proc_Creating_an_Infrastructure_Mapping.adoc
+++ b/doc-V2V_Guide/cfme/doc/modules/proc_Creating_an_Infrastructure_Mapping.adoc
@@ -7,11 +7,22 @@ Create an infrastructure mapping to map your VMware resources to Red Hat Virtual
 . Enter the name of your mapping and click *Next*.
 . Select a source cluster and a target cluster.
 . Click *Add Mapping* and *Next*.
-. Select the target cluster from the drop-down list.
-. Select a source datastore and a target datastore.
-. Click *Add Mapping* and *Next*.
-. Select a source network and a target network.
-. Click *Add Mapping* and *Create*.
-. If a successful mapping message is displayed, click *Close*. Your infrastructure mapping is displayed in menu:Compute[Migration > Overview].
 
-After creating an infrastructure mapping, you can create a migration plan.
+. Map the datastore of each cluster:
+
+.. Select the target cluster from the drop-down list.
+.. Select a source datastore and a target datastore.
+.. Click *Add Mapping* and *Next*.
+
+. Map the network of each cluster:
+
+.. Select the target cluster from the drop-down list.
+.. Select a source network and a target network.
+.. Click *Add Mapping*.
+
+. Click *Create*.
+. If a successful mapping message is displayed, click *Close*.
++
+Your infrastructure mapping is displayed in menu:Compute[Migration].
+
+After creating an infrastructure mapping, create a migration plan.
