--- a/doc-V2V_Guide/cfme/doc/modules/con_Migration_overview.adoc
+++ b/doc-V2V_Guide/cfme/doc/modules/con_Migration_overview.adoc
@@ -10,7 +10,7 @@ image:migration_workflow.png[]
 . The ESXi host fingerprint is captured for authentication during the conversion process if the VDDK transport method is used. If SSH is used, a shared SSH key is used to connect to the ESX host where the virtual machine resides.
 . Using the RHV attributes for the target environment, CloudForms initiates communication with the RHV conversion host.
 . The RHV conversion host connects to the source datastore through the ESX host, using  `virt-v2v-wrapper.py`, and streams the disk to be converted to the target data domain chosen in the infrastructure mapping using `virt-v2v`.
-. After the disk is converted, the target virtual machine is created in RHV. During creation, the target virtual machine uses the source virtual machine’s metadata to maintain the virtual machine’s attributes after migration.
+. After the disk is converted, the target virtual machine is created in RHV. During creation, the target virtual machine uses the source virtual machine’s metadata to maintain the virtual machine’s attributes, including tags, power state, and MAC address, after migration.
 . After the virtual machine is created, the disk is attached to the target virtual machine.
 
 The virtual machine migration is complete and its status is displayed in CloudForms.
