--- a/doc-V2V_Guide/cfme/doc/modules/proc_Creating_and_Running_a_Migration_Plan.adoc
+++ b/doc-V2V_Guide/cfme/doc/modules/proc_Creating_and_Running_a_Migration_Plan.adoc
@@ -1,10 +1,13 @@
 [[Creating_a_Migration_Plan]]
 = Creating and Running a Migration Plan
 
-If you are migrating a large number of virtual machines or you are re-migrating virtual machines after a failed migration, you must create a CSV file of virtual machines to import.
+[discrete]
+== Prerequisites
 
+* If you are migrating a large number of virtual machines or you are re-migrating virtual machines after a failed migration, create a CSV file containing a list of virtual machines to import.
++
 The CSV file specifies the virtual machine names (mandatory) and providers (optional, for differentiating virtual machines with identical names), in the following format:
-
++
 [options="nowrap" subs="+quotes,verbatim"]
 ----
 Name, Provider
@@ -14,7 +17,9 @@ _vm03_, _vSphere3_
 ...
 ----
 
-If you are migrating a small number of virtual machines, follow the procedure below. The migration plan discovers the virtual machines, which you select manually.
+* Check the target datastore to ensure that there are no virtual machines with the same name as a virtual machine that is being migrated. A name conflict will cause the migration to fail.
+
+If you are migrating a small number of virtual machines, you can use the migration plan to discover the virtual machines. The migration plan displays a list, from which you manually select the virtual machines to migrate.
 
 [discrete]
 == Procedure
@@ -25,14 +30,14 @@ If you are migrating a small number of virtual machines, follow the procedure be
 
 . Enter the name of your migration plan.
 
-. Discover the virtual machines to migrate:
+. Discover the virtual machines:
 
-* If you are migrating a small number of virtual machines:
+* If you are using the migration plan to discover the virtual machines automatically:
 
+.. Select *Choose from a list of VMs discovered in the selected infrastructure mapping*.
 .. Click *Next*.
-.. Select *Choose from a list of VMs discovered in the selected infrastructure mapping* and click *Next*.
 
-* If you are migrating a large number of virtual machines:[[CSV_import]]
+* If you are importing a CSV file:[[CSV_import]]
 
 .. (Optional) To validate your infrastructure mapping, select *Choose from a list of VMs discovered in the selected infrastructure mapping* and click *Next*. If your virtual machines appear in the list, the infrastructure mapping is correct. Click *Back*.
 .. Select *Import a CSV file with a list of VMs to be migrated* and click *Next*.
@@ -42,9 +47,9 @@ If you are migrating a small number of virtual machines, follow the procedure be
 
 . Select *Start Migration Immediately* and click *Create*.
 
-. Click *Close*. The migration plan may take some time to complete. *In Progress Plans*, the status of the datastores and VMs, and the elapsed time are displayed.
+. Click *Close*. The migration plan may take some time to complete. *In Progress Plans*, the amount of data being transferred, the number of virtual machines being migrated, and the elapsed time are displayed.
 +
-When the migration is complete, *Completed Migrations* is displayed, with the number of successfully migrated virtual machines.
+When the migration is complete, the migration plan is displayed under *Completed Migrations*, with the number of successfully migrated virtual machines. A *Retry* option enables you to re-migrate any virtual machines in this plan that failed to migrate.
 
 [NOTE]
 ====
