--- a/doc-V2V_Guide/cfme/doc/modules/con_Prerequisites.adoc
+++ b/doc-V2V_Guide/cfme/doc/modules/con_Prerequisites.adoc
@@ -19,6 +19,14 @@ See the link:https://access.redhat.com/documentation/en-us/red_hat_virtualizatio
 +
 See  link:https://access.redhat.com/documentation/en-us/red_hat_virtualization/4.2/html-single/installation_guide/#Installing_RHVH[Installing Red Hat Virtualization Host] in the _Red Hat Virtualization Installation Guide_.
 
+* Data and ISO storage domains attached to RHV datacenter.
++
+See link:https://access.redhat.com/documentation/en-us/red_hat_virtualization/4.2/html-single/administration_guide/#sect-Preparing_and_Adding_NFS_Storage[Preparing and Adding NFS Storage] and  link:https://access.redhat.com/documentation/en-us/red_hat_virtualization/4.2/html-single/administration_guide/#Attaching_an_iso_domain[Attaching an Existing ISO domain to a Data Center] in the _Red Hat Virtualization Administration Guide_.
+
+* VirtIO and Guest Tool images uploaded to the ISO storage domain.
++
+See link:https://access.redhat.com/documentation/en-us/red_hat_virtualization/4.2/html-single/administration_guide/#Uploading_the_VirtIO_and_Guest_Tool_Image_Files_to_an_ISO_Storage_Domain[Uploading the VirtIO and Guest Tool Image Files to an ISO Storage Domain] in the _Red Hat Virtualization Administration Guide_.
+
 * Red Hat CloudForms 4.6.4 or later installed.
 +
 See  link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.6/html/installing_red_hat_cloudforms_on_red_hat_virtualization/[Installing Red Hat CloudForms on Red Hat Virtualization] for installation instructions.
