--- a/doc-V2V_Guide/cfme/doc/assembly_Installation.adoc
+++ b/doc-V2V_Guide/cfme/doc/assembly_Installation.adoc
@@ -1,8 +1,14 @@
 [id="Installation"]
 = Installation
 
+The installation phase includes the following requirements:
+
+* Prerequisites: Installing and configuring of the Red Hat environment
+* Creating RHV conversion hosts
+* Configuring RHV conversion hosts
+
 include::modules/con_Prerequisites.adoc[leveloffset=+1]
 include::modules/proc_Creating_rhv_conversion_hosts.adoc[leveloffset=+1]
 include::modules/proc_Configuring_rhv_conversion_hosts.adoc[leveloffset=+1]
 
-After you have installed and configured the migration environment, you are ready to begin the discovery phase.
+After you have installed and configured your environment, you are ready to begin the discovery and assessment phase.
