--- a/doc-V2V_Guide/cfme/doc/modules/proc_Creating_and_Running_a_Migration_Plan.adoc
+++ b/doc-V2V_Guide/cfme/doc/modules/proc_Creating_and_Running_a_Migration_Plan.adoc
@@ -4,7 +4,7 @@
 [discrete]
 == Prerequisites
 
-* If you are migrating a large number of virtual machines or you are re-migrating virtual machines after a failed migration, create a CSV file containing a list of virtual machines to import.
+* If you are migrating a large number of virtual machines or you are re-migrating virtual machines after a failed migration, create a CSV file [[CSV_file]]containing a list of virtual machines to import.
 +
 The CSV file specifies the virtual machine names (mandatory) and providers (optional, for differentiating virtual machines with identical names), in the following format:
 +
@@ -37,7 +37,7 @@ If you are migrating a small number of virtual machines, you can use the migrati
 .. Select *Choose from a list of VMs discovered in the selected infrastructure mapping*.
 .. Click *Next*.
 
-* If you are importing a CSV file:[[CSV_import]]
+* If you are importing a CSV file:
 
 .. (Optional) To validate your infrastructure mapping, select *Choose from a list of VMs discovered in the selected infrastructure mapping* and click *Next*. If your virtual machines appear in the list, the infrastructure mapping is correct. Click *Back*.
 .. Select *Import a CSV file with a list of VMs to be migrated* and click *Next*.
