--- a/doc-V2V_Guide/cfme/doc/modules/proc_Creating_rhv_conversion_hosts.adoc
+++ b/doc-V2V_Guide/cfme/doc/modules/proc_Creating_rhv_conversion_hosts.adoc
@@ -59,4 +59,4 @@ If you upgrade your RHV environment, you must run the `conversion_host_enable` p
 [discrete]
 == Additional resources
 
-* For more information, see link:https://github.com/oVirt/ovirt-ansible-v2v-conversion-host[V2V - Conversion Host - Ansible]
+* For more information, see link:https://github.com/oVirt/ovirt-ansible-v2v-conversion-host[V2V - Conversion Host - Ansible].
