--- a/doc-V2V_Guide/cfme/master.adoc
+++ b/doc-V2V_Guide/cfme/master.adoc
@@ -32,24 +32,24 @@ The infrastructure migration is performed with Red Hat CloudForms. CloudForms is
 
 The infrastructure migration process has 4 key phases:
 
-* Prerequisites:
-** Installing Red Hat Virtualization, Red Hat Virtualization Host, and Red Hat CloudForms.
-** Creating and configuring RHV conversion hosts.
+* Installation:
+** Installing and configuring Red Hat Virtualization, Red Hat Virtualization Host, and Red Hat CloudForms
+** Creating and configuring RHV conversion hosts
 
-* Discovery:
-** Discovering your environment.
-** Planning your migration.
-** Best Practices.
+* Discovery and Assessment:
+** Discovering and assessing your environment
+** Migration example
+** Best practices
 
 * Planning:
-** Creating an infrastructure mapping.
-** Creating and running a migration plan.
+** Creating an infrastructure mapping
+** Creating and running a migration plan
 
 * Migration:
-** Migration workflow.
-** Troubleshooting.
+** Migration workflow
+** Troubleshooting
 
 include::doc/assembly_Installation.adoc[leveloffset=+1]
-include::doc/assembly_Discovery.adoc[leveloffset=+1]
+include::doc/assembly_Discovery_and_Assessment.adoc[leveloffset=+1]
 include::doc/assembly_Planning.adoc[leveloffset=+1]
 include::doc/assembly_Migration.adoc[leveloffset=+1]
