--- a/doc-V2V_Guide/cfme/doc/assembly_Planning.adoc
+++ b/doc-V2V_Guide/cfme/doc/assembly_Planning.adoc
@@ -3,8 +3,8 @@
 
 The planning phase of the migration has 2 key stages:
 
-* Creating an infrastructure mapping.
-* Creating and running a migration plan.
+* Creating an infrastructure mapping
+* Creating and running a migration plan
 
 include::modules/proc_Creating_an_Infrastructure_Mapping.adoc[leveloffset=+1]
 include::modules/proc_Creating_and_Running_a_Migration_Plan.adoc[leveloffset=+1]
