Fix brackets on add/remove resource on service

--- a/api/reference/services.adoc
+++ b/api/reference/services.adoc
@@ -500,9 +500,7 @@ POST /api/services/:id
 ----
 {
   "action" : "add_resource",
-  "resource" : {
-    { "resource" : { "href" : "http://localhost:3000/api/vms/11" } }
-  }
+  "resource" : { "resource" : { "href" : "http://localhost:3000/api/vms/11" } }
 }
 ----
 
@@ -547,9 +545,7 @@ POST /api/services/:id
 ----
 {
   "action" : "remove_resource",
-  "resource" : {
-     { "resource" : { "href" : "http://localhost:3000/api/vms/11" } }
-  }
+  "resource" : { "resource" : { "href" : "http://localhost:3000/api/vms/11" } }
 }
 ----
 
