--- a/doc-Deployment_Planning_Guide/topics/capacity.adoc
+++ b/doc-Deployment_Planning_Guide/topics/capacity.adoc
@@ -58,8 +58,7 @@ After creating the new user, add the user's credentials to the settings for the 
 [[data_collection_for_rhev_4.x]]
 === Data Collection for Red Hat Virtualization
 
-To collect capacity and utilization data for Red Hat Enterprise
-Virtualization, you must add {product-title} as
+To collect capacity and utilization data for Red Hat Virtualization, you must add {product-title} as
 a user to the RHEV-M database.
 
 Perform this procedure on the PostgreSQL server where the history
@@ -118,7 +117,7 @@ host    all      all    0.0.0.0/0     md5
 listen_addresses  =  '*'
 ------
 +
-. Reload the PostgreSQL configuration using the following command options:
+. Reload the PostgreSQL configuration:
 
 +
 ------
