--- a/doc-Installing_on_SCVMM/topics/installation.adoc
+++ b/doc-Installing_on_SCVMM/topics/installation.adoc
@@ -3,7 +3,7 @@
 
 Installing {product-title} consists of the following steps:
 
-. Uploading the VHD image into your SCVMM Library.
+. Downloading the VHD image to your SCVMM Library.
 . Creating a blank VHD to be used for the DB disk.
 . Running a Powershell script to create a deployable template for the {product-title_short} appliance.
 . Configuring the {product-title_short} appliance.
@@ -12,48 +12,50 @@ After you have completed all the procedures in this guide, you will have a worki
 
 ifdef::miq[]
 [[obtaining-the-appliance]]
-=== Obtaining the appliance
+=== Obtaining the Appliance
 
-. In a browser, navigate to link:manageiq.org/download[].
+Download the VHD appliance image to your SCVMM library:
+
+. Log in to your SCVMM environment.
+. In a web browser, navigate to link:manageiq.org/download[].
 . Select *SCVMM* from the *--Choose your platform--* list.
 . Select *Stable* from the *--Choose a release--* list.
-. Follow the instructions to download the appliance.
+. Follow the instructions to download the appliance to your SCVMM Library.
+. When the image finishes downloading, open a PowerShell terminal and run `'Refresh-LibraryShare'`:
++
+----
+PS C:\Users\Administrator.MS01> 'Refresh-LibraryShare'
+----
++
 endif::miq[]
 
 ifdef::cfme[]
 [[obtaining-the-appliance]]
 === Obtaining the Appliance
 
-To obtain a copy of the appliance from the Customer Portal:
+Download the VHD appliance image from the Red Hat Customer Portal to your SCVMM library:
 
-. Log in to the Red Hat Customer Portal at link:https://access.redhat.com[access.redhat.com] using your customer account details.
-. Click *Downloads* in the menu bar.
+. Log in to your SCVMM environment and open a web browser.
+. Navigate to the Red Hat Customer Portal *Downloads* page at link:https://access.redhat.com/downloads[access.redhat.com].
 . Click *A-Z* to sort the product downloads alphabetically.
 . Click *Red Hat CloudForms* to access the product download page.
-//EDIT APPLIANCE IMAGE NAME - look at Portal
-. From the list of installers and images, click the *Download Now* link for *CFME Red Hat Virtual Appliance (qcow)*.
+. Log in using your customer account details when prompted.
+. From the list of installers and images, click the *Download Now* link for *CFME SCVMM Virtual Appliance* and download to your SCVMM Library.
+. When the image finishes downloading, open a PowerShell terminal and run `'Refresh-LibraryShare'`:
++
+----
+PS C:\Users\Administrator.MS01> 'Refresh-LibraryShare'
+----
++
 endif::cfme[]
 
 
-[[uploading-the-appliance-on-SCVMM]]
-=== Uploading the Appliance to the SCVMM Library
-(Preparing ?)
+[[deploying-the-appliance-SCVMM]]
+=== Deploying the Appliance
 
-EDIT!
-Log in to your SCVMM environment (?) to upload your {product-title} appliance.
+Create a blank VHD to be used for the database disk and add it to your SCVMM Library, then create a template for the {product-title_short} appliance.
 
-. Log in to SCVMM.
-.
-.
-
-You have successfully uploaded the {product-title} appliance.
-
-////
-??
-The appliance image is placed in a queue to be uploaded. It may take some time before the Status of the image changes from Queued to Active.
-////
-
-. Create a blank VHD to be used for the DB disk and add it to your SCVMM Library.
+. Create a blank VHD to be used for the DB disk and add it to your SCVMM Library. Run this command on a node containing Hyper-V.
 +
 For example, on a node with Hyper-V installed you can create a 20GB blank VHD with the following Powershell command:
 +
@@ -61,8 +63,14 @@ For example, on a node with Hyper-V installed you can create a 20GB blank VHD wi
 $ New-VHD -Path 'C:\path\to\my\newvdisk.vhdx' -SizeBytes 20gb -Dynamic
 ----
 +
-
-. Run the following Powershell script to create a deployable template for the {product-title_short} appliance:
+. Copy the blank VHD disk to the SCVMM Library.
+. In a PowerShell terminal, run `'Refresh-LibraryShare'` to refresh the library:
++
+----
+PS C:\Users\Administrator.MS01> 'Refresh-LibraryShare'
+----
++
+. Run the following PowerShell script to create a deployable template for the {product-title_short} appliance:
 +
 ----
 $networkName = "yourNetwork"
@@ -100,4 +108,6 @@ $HWProfile `
 Remove-HardwareProfile -HardwareProfile $templateName
 ----
 +
-.
+. NEXT steps
+
+Your SCVMM environment now contains a running {product-title_short} appliance.
